--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: City Bikes CI pipeline
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 11.0.4
-    - name: Build with Maven
+    - name: Build and run auotimation suite with Maven
       run: mvn clean test --file pom.xml
     - name: Cucumber Reports
       uses: deblockt/cucumber-report-annotations-action@v1.7
