--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    <sonar.organization>nehaoza</sonar.organization>
+    <sonar.projectKey>nehaoza_city-bikes-automation</sonar.projectKey>
   </properties>
 
   <dependencies>
