--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,33 +10,36 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  setup:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.4
+
+  sonar-scan:
+    - name: Cache SonarCloud packages
+      uses: actions/cache@v1
+      with:
+        path: ~/.sonar/cache
+        key: ${{ runner.os }}-sonar
+        restore-keys: ${{ runner.os }}-sonar
+    - name: SonarCloud Analysis
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -DskipTests
+      env:
+        # Needed to get some information about the pull request, if any
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+  automation-suite:
       - name: Build and run auotimation suite with Maven
         run: mvn clean test
+  extract-cucumber-report:
       - name: Cucumber Reports
         uses: deblockt/cucumber-report-annotations-action@v1.7
         with:
           access-token: ${{ secrets.GITHUB_TOKEN }}
           path: "**/cucumber.json"
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: SonarCloud Analysis
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -DskipTests
-        env:
-              # Needed to get some information about the pull request, if any
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              # SonarCloud access token should be generated from https://sonarcloud.io/account/security/
-            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
